delete python codes

--- a/JavaScriptCodePractices/application_page.html
+++ b/JavaScriptCodePractices/application_page.html
@@ -6,7 +6,8 @@
     <title>Application Form</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial;
+            font-size: large;
             display: flex;
             justify-content: center;
             align-items: center;
