--- a/javaScript/animatedborder.html
+++ b/javaScript/animatedborder.html
@@ -26,7 +26,7 @@ h1{
 .card{
   margin: 0 auto;
   padding: 2em;
-  width: 300px;
+  width: 500px;
   background: #1c1f2b;
   text-align: center;
   border-radius: 10px;
@@ -78,10 +78,16 @@ body :hover{
 <body >
    <section class="card">
     <h1>Animation Borders</h1>
-        Animating borders in CSS can be surprisingly difficult.
-         Aside from simple transitions like width or color, more complicated
-          animations often require other alternatives, usually not even 
-          using the actual border property at all
+    Animated borders add a dynamic and engaging visual effect to UI elements,
+    making them more interactive and appealing. Using CSS keyframes, borders
+    can smoothly transition in color, width, or even shape over time. Hover 
+    effects further enhance user experience by changing border styles when 
+    users interact with elements. Additionally, creative techniques like 
+    border-image and clip-path allow for unique animated designs. 
+    These effects can be lightweight and optimized to ensure smooth 
+    performance across various devices. Implementing animated borders 
+    thoughtfully can significantly improve the aesthetics and usability 
+    of a website or application.
           
    </section>
 
