--- a/ReelsAnswers/Quiz.html
+++ b/ReelsAnswers/Quiz.html
@@ -1,209 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Flow with Gamification</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Quiz Flow with Gamification</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <style>
-        * { padding: 5px 2px; }
-        body { font-family: Arial, sans-serif; margin: 20px; border: 1px solid black;}
-        .question { margin-bottom: 15px; }
-        .options label { display: block; }
-        button { margin-top: 10px; padding: 10px; background-color: rgb(132, 132, 193); width: 100px; height: 50px; border-radius: 5px; border: 1px solid black; }
-        button:hover { background-color: red; }
-        .correct { color: green; }
-        .incorrect { color: red; }
-        #quizContainer { display: none; }
-    </style>
-</head>
-<body class="d-flex justify-content-center align-items-center  bg-light">
-    <div id="signInContainer" class="card p-4 shadow-lg" style="width: 450px; height: 100vh;">
-        <h4 class="text-center mb-3">Sign In</h4>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" id="email" name="email" class="form-control" required />
+        <style>
+            * {
+                padding: 5px 2px;
+            }
+            body {
+                font-family: Arial, sans-serif;
+                margin: 20px;
+                border: 1px solid black;
+            }
+            .question {
+                margin-bottom: 15px;
+            }
+            .options label {
+                display: block;
+            }
+            button {
+                margin-top: 10px;
+                padding: 10px;
+                background-color: rgb(132, 132, 193);
+                width: 100px;
+                height: 50px;
+                border-radius: 5px;
+                border: 1px solid black;
+            }
+            button:hover {
+                background-color: red;
+            }
+            .correct {
+                color: green;
+            }
+            .incorrect {
+                color: red;
+            }
+            #quizContainer {
+                display: none;
+            }
+        </style>
+    </head>
+    <body class="d-flex justify-content-center align-items-center bg-light">
+        <div id="signInContainer" class="card p-4 shadow-lg" style="width: 450px; height: 100vh;">
+            <h4 class="text-center mb-3">Sign In</h4>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" id="email" name="email" class="form-control" required />
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password:</label>
+                <input type="password" id="password" name="password" class="form-control" required />
+            </div>
+            <button class="btn btn-primary w-100" onclick="signIn()">Sign In</button>
+            <p id="signInText" class="mt-3 text-center text-danger"></p>
         </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" id="password" name="password" class="form-control" required />
+
+        <div id="quizContainer">
+            <h1>Quiz Flow with Gamification</h1>
+            <h1 id="counter">2:00</h1>
+            <div style="font-size: 20px; color: red;" id="score"></div>
+            <form id="quizForm"></form>
         </div>
-        <button class="btn btn-primary w-100" onclick="signIn()">Sign In</button>
-        <p id="signInText" class="mt-3 text-center text-danger"></p>
-    </div>
 
-    <div id="quizContainer">
-        <h1>Quiz Flow with Gamification</h1>
-        <h1 id="counter">2:00</h1>
-        <div style="font-size: 20px; color: red;" id="score"></div>
-        <form id="quizForm"></form>
-    </div>
+        <script>
+            let signInText = document.getElementById("signInText");
+            let quizContainer = document.getElementById("quizContainer");
+            let signInContainer = document.getElementById("signInContainer");
 
-    <script>
-        let signInText = document.getElementById("signInText");
-        let quizContainer = document.getElementById("quizContainer");
-        let signInContainer = document.getElementById("signInContainer");
-
-        function signIn() {
-            let email = document.getElementById("email").value.trim();
-            if (email === "") {
-                signInText.textContent = "Please enter your email.";
-                return;
-            }
-            signInText.textContent = "Hi " + email + ", verifying your account...";
-            setTimeout(() => {
-                signInContainer.style.display = "none";
-                quizContainer.style.display = "block";
-                startCountdown();
-            }, 1000);
-        }
-
-        const quizData = [
-            { question: "1. Who is known as the father of computers?", options: { a: "Charles Babbage", b: "Alan Turing", c: "Bill Gates", d: "Steve Jobs" }, answer: "a" },
-            { question: "2. What is the brain of the computer?", options: { a: "RAM", b: "Hard Drive", c: "CPU", d: "Monitor" }, answer: "c" },
-            { question: "3. Which of the following is an input device?",
-                options: { a: "Monitor", b: "Keyboard", c: "Speaker", d: "Printer" },
-                answer: "b"
-            },
-            {
-                question: "4. What does RAM stand for?",
-                options: { a: "Read Access Memory", b: "Random Access Memory", c: "Run Access Memory", d: "Remote Access Memory" },
-                answer: "b"
-            },
-            {
-                question: "5. Which of the following computer language is written in binary codes only?",
-                options: { a: "pascal", b: "machine language", c: "C", d: "C#" },
-                answer: "b"
-            },
-            {
-                question: "6. Which of the following is used in EBCDIC?",
-                options: { a: "Super Computers", b: "Mainframes", c: "Machine Codes", d: "Programming" },
-                answer: "b"
-            },
-            {
-                question: "7. Which of the following device use positional notation to represent a decimal number?",
-                options: { a: "Pascaline", b: "Abacus", c: "Computer", d: "Calculator" },
-                answer: "b"
-            },
-            {
-                question: "8. Which of the following is designed to control the operations of a computer?",
-                options: { a: "User", b: "Application Software", c: "System Software", d: "Utility Software" },
-                answer: "c"
-            },
-            {
-                question: "9. Which of the following part of a processor contains the hardware necessary to perform all the operations required by a computer?",
-                options: { a: "Controller", b: "Registers", c: "Cache", d: "Data path" },
-                answer: "d"
-            },
-            {
-                question: "10. Which of the following is not a type of computer code?",
-                options: { a: "EDIC", b: "ASCII", c: "BCD", d: "EBCDIC" },
-                answer: "a"
-            },
-            {
-                question: "11. Which of the following monitor looks like a television and are normally used with non-portable computer systems?",
-                options: { a: "LED", b: "LCD", c: "CRT", d: "Flat Panel Monitors" },
-                answer: "c"
-            },
-            {
-                question: "12. Which of the following unit is responsible for converting the data received from the user into a computer understandable format?",
-                options: { a: "Output Unit", b: "Input Unit", c: "Memory Unit", d: "Arithmetic & Logic Unit" },
-                answer: "b"
-            },
-            {
-                question: "13. Which of the following is the smallest unit of data in a computer?",
-                options: { a: "Bit", b: "KB", c: "Nibble", d: "Byte" },
-                answer: "a"
-            },
-            {
-                question: "14. Which of the following computers are lower than mainframe computers in terms of speed and storage capacity?",
-                options: { a: "Mainframes", b: "Hybrid", c: "Mini", d: "Super" },
-                answer: "c"
-            },
-            {
-                question: "15. Which of the following type of computer is mostly used for automatic operations?",
-                options: { a: "analog", b: "digital", c: "hybrid", d: "remote" },
-                answer: "b"
-            }
-        ];
-
-        const quizForm = document.getElementById("quizForm");
-        const scoreDiv = document.getElementById("score");
-
-        quizData.forEach((questionData, index) => {
-            const questionDiv = document.createElement("div");
-            questionDiv.className = "question";
-            questionDiv.innerHTML = `<p>${questionData.question}</p>`;
-            const optionsDiv = document.createElement("div");
-            optionsDiv.className = "options";
-
-            for (const option in questionData.options) {
-                const label = document.createElement("label");
-                label.innerHTML = `<input type="radio" name="q${index + 1}" value="${option}"> ${option}) ${questionData.options[option]}`;
-                optionsDiv.appendChild(label);
+            function signIn() {
+                let email = document.getElementById("email").value.trim();
+                if (email === "") {
+                    signInText.textContent = "Please enter your email.";
+                    return;
+                }
+                signInText.textContent = "Hi " + email + ", verifying your account...";
+                setTimeout(() => {
+                    signInContainer.style.display = "none";
+                    quizContainer.style.display = "block";
+                    startCountdown();
+                }, 1000);
             }
 
-            questionDiv.appendChild(optionsDiv);
-            quizForm.appendChild(questionDiv);
-        });
+            const quizData = [
+                { question: "1. Who is known as the father of computers?", options: { a: "Charles Babbage", b: "Alan Turing", c: "Bill Gates", d: "Steve Jobs" }, answer: "a" },
+                { question: "2. What is the brain of the computer?", options: { a: "RAM", b: "Hard Drive", c: "CPU", d: "Monitor" }, answer: "c" },
+                { question: "3. Which of the following is an input device?", options: { a: "Monitor", b: "Keyboard", c: "Speaker", d: "Printer" }, answer: "b" },
+                {
+                    question: "4. What does RAM stand for?",
+                    options: { a: "Read Access Memory", b: "Random Access Memory", c: "Run Access Memory", d: "Remote Access Memory" },
+                    answer: "b",
+                },
+                {
+                    question: "5. Which of the following computer language is written in binary codes only?",
+                    options: { a: "pascal", b: "machine language", c: "C", d: "C#" },
+                    answer: "b",
+                },
+                {
+                    question: "6. Which of the following is used in EBCDIC?",
+                    options: { a: "Super Computers", b: "Mainframes", c: "Machine Codes", d: "Programming" },
+                    answer: "b",
+                },
+                {
+                    question: "7. Which of the following device use positional notation to represent a decimal number?",
+                    options: { a: "Pascaline", b: "Abacus", c: "Computer", d: "Calculator" },
+                    answer: "b",
+                },
+                {
+                    question: "8. Which of the following is designed to control the operations of a computer?",
+                    options: { a: "User", b: "Application Software", c: "System Software", d: "Utility Software" },
+                    answer: "c",
+                },
+                {
+                    question: "9. Which of the following part of a processor contains the hardware necessary to perform all the operations required by a computer?",
+                    options: { a: "Controller", b: "Registers", c: "Cache", d: "Data path" },
+                    answer: "d",
+                },
+                {
+                    question: "10. Which of the following is not a type of computer code?",
+                    options: { a: "EDIC", b: "ASCII", c: "BCD", d: "EBCDIC" },
+                    answer: "a",
+                },
+                {
+                    question: "11. Which of the following monitor looks like a television and are normally used with non-portable computer systems?",
+                    options: { a: "LED", b: "LCD", c: "CRT", d: "Flat Panel Monitors" },
+                    answer: "c",
+                },
+                {
+                    question: "12. Which of the following unit is responsible for converting the data received from the user into a computer understandable format?",
+                    options: { a: "Output Unit", b: "Input Unit", c: "Memory Unit", d: "Arithmetic & Logic Unit" },
+                    answer: "b",
+                },
+                {
+                    question: "13. Which of the following is the smallest unit of data in a computer?",
+                    options: { a: "Bit", b: "KB", c: "Nibble", d: "Byte" },
+                    answer: "a",
+                },
+                {
+                    question: "14. Which of the following computers are lower than mainframe computers in terms of speed and storage capacity?",
+                    options: { a: "Mainframes", b: "Hybrid", c: "Mini", d: "Super" },
+                    answer: "c",
+                },
+                {
+                    question: "15. Which of the following type of computer is mostly used for automatic operations?",
+                    options: { a: "analog", b: "digital", c: "hybrid", d: "remote" },
+                    answer: "b",
+                },
+            ];
 
-        let submitButton = document.createElement("button");
-        submitButton.type = "submit";
-        submitButton.textContent = "Submit";
-        submitButton.className = "btn btn-success mt-3";
-        quizForm.appendChild(submitButton);
+            const quizForm = document.getElementById("quizForm");
+            const scoreDiv = document.getElementById("score");
 
-        let score = 0;
-
-        function calculateScore() {
-            score = 0;
             quizData.forEach((questionData, index) => {
-                const selectedOption = document.querySelector(`input[name="q${index + 1}"]:checked`);
-                if (selectedOption) {
-                    if (selectedOption.value === questionData.answer) {
-                        score++;
-                    }
+                const questionDiv = document.createElement("div");
+                questionDiv.className = "question";
+                questionDiv.innerHTML = `<p>${questionData.question}</p>`;
+                const optionsDiv = document.createElement("div");
+                optionsDiv.className = "options";
+
+                for (const option in questionData.options) {
+                    const label = document.createElement("label");
+                    label.innerHTML = `<input type="radio" name="q${index + 1}" value="${option}"> ${option}) ${questionData.options[option]}`;
+                    optionsDiv.appendChild(label);
                 }
+
+                questionDiv.appendChild(optionsDiv);
+                quizForm.appendChild(questionDiv);
             });
-            scoreDiv.innerText = `Your Score: ${score} / ${quizData.length}`;
-        }
 
-        quizForm.addEventListener("submit", function(event) {
-            event.preventDefault();
-            calculateScore();
-            hideSubmitButton();
-            clearInterval(countdownInterval);
-            counter.style.display = "none";
-        });
+            let submitButton = document.createElement("button");
+            submitButton.type = "submit";
+            submitButton.textContent = "Submit";
+            submitButton.className = "btn btn-success mt-3";
+            quizForm.appendChild(submitButton);
 
-        let time = 120;
-        let counter = document.getElementById('counter');
-        let countdownInterval;
+            let score = 0;
 
-        function timer(seconds) {
-            let Minutes = Math.floor(seconds / 60);
-            let DuringSeconds = Math.floor(seconds % 60);
-            return `${String(Minutes).padStart(2, "0")}:${String(DuringSeconds).padStart(2, "0")}`;
-        }
+            function calculateScore() {
+                score = 0;
+                quizData.forEach((questionData, index) => {
+                    const selectedOption = document.querySelector(`input[name="q${index + 1}"]:checked`);
+                    if (selectedOption) {
+                        if (selectedOption.value === questionData.answer) {
+                            score++;
+                        }
+                    }
+                });
+                scoreDiv.innerText = `Your Score: ${score} / ${quizData.length}`;
+            }
 
-        function startCountdown() {
-            countdownInterval = setInterval(() => {
-                if (time <= 0) {
-                    clearInterval(countdownInterval);
-                    calculateScore();
-                    hideSubmitButton();
-                } else {
-                    counter.textContent = timer(time);
-                    time--;
-                }
-            }, 1000);
-        }
+            quizForm.addEventListener("submit", function (event) {
+                event.preventDefault();
+                calculateScore();
+                hideSubmitButton();
+                clearInterval(countdownInterval);
+                counter.style.display = "none";
+            });
 
-        function hideSubmitButton() {
-            submitButton.style.display = "none";
-        }
-    </script>
-</body>
+            let time = 120;
+            let counter = document.getElementById("counter");
+            let countdownInterval;
+
+            function timer(seconds) {
+                let Minutes = Math.floor(seconds / 60);
+                let DuringSeconds = Math.floor(seconds % 60);
+                return `${String(Minutes).padStart(2, "0")}:${String(DuringSeconds).padStart(2, "0")}`;
+            }
+
+            function startCountdown() {
+                countdownInterval = setInterval(() => {
+                    if (time <= 0) {
+                        clearInterval(countdownInterval);
+                        calculateScore();
+                        hideSubmitButton();
+                    } else {
+                        counter.textContent = timer(time);
+                        time--;
+                    }
+                }, 1000);
+            }
+
+            function hideSubmitButton() {
+                submitButton.style.display = "none";
+            }
+        </script>
+    </body>
 </html>
