Add days and time

--- a/javaScript/date.html
+++ b/javaScript/date.html
@@ -3,27 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Digital Clock</title>
     <style>
-        h1{
-            margin: 10px 20px;
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .container {
+            display: flex;
+            gap: 20px;
+            align-items: center;
+        }
+        .days {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+        .day {
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+            font-weight: bold;
+            width: 120px;
+            background-color: #1d8cbc;
+        }
+        .day:hover {
+            background-color: pink;
+        }
+        .current-day {
+            background-color: lightcoral;
+            color: white;
+        }
+        .clock-card {
             font-family: 'Courier New', Courier, monospace;
             color: brown;
-            border: 2px dotted;
+            border: 2px solid brown;
             padding: 20px 30px;
-            width: fit-content;
+            text-align: center;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            transition: color 0.3s ease;
+            font-size: 24px;
+            font-weight:500
+        }
+        .clock-card:hover {
+            color: rgb(18, 18, 19);
+            background-color: pink;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <h1 id="demo"></h1>
+    <div class="container">
+        <div class="days" id="days-list"></div>
+        <div id="demo" class="clock-card"></div>
+    </div>
     <script>
-setInterval(myFunction, 1000);
-function myFunction() {
-    let d=new Date();
-    document.getElementById('demo').innerHTML=
-    d.getHours()+":"+d.getMinutes()+":"+d.getSeconds();
-}
+        function generateDays() {
+            const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+            let currentDay = new Date().toLocaleDateString('en-US', { weekday: 'long' });
+            let daysList = document.getElementById('days-list');
+            daysList.innerHTML = '';
+            days.forEach(day => {
+                let dayDiv = document.createElement('div');
+                dayDiv.className = 'day' + (day === currentDay ? ' current-day' : '');
+                dayDiv.textContent = day;
+                daysList.appendChild(dayDiv);
+            });
+        }
+        
+        function myFunction() {
+            let d = new Date();
+            let hours = d.getHours();
+            let minutes = d.getMinutes();
+            let seconds = d.getSeconds();
+            let ampm = hours >= 12 ? 'PM' : 'AM';
+            hours = hours % 12 || 12; // Convert to 12-hour format
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+            seconds = seconds < 10 ? '0' + seconds : seconds;
+            let date = d.toLocaleDateString('en-GB', {
+                day: '2-digit',
+                month: '2-digit',
+                year: 'numeric'
+            }).replace(/\//g, '-'); // Convert date format to DD-MM-YYYY
+            document.getElementById('demo').innerHTML = `${date}<br>${hours}:${minutes}:${seconds} ${ampm}`;
+        }
+        
+        generateDays();
+        setInterval(myFunction, 1000);
+        setInterval(generateDays, 60000);
     </script>
 </body>
 </html>
