--- a/ReelsAnswers/boxes.html
+++ b/ReelsAnswers/boxes.html
@@ -279,5 +279,6 @@
                 updateCartUI();
             }
         </script>
+        <button type="button" onclick="window.print()">Print</button>
     </body>
 </html>
