--- a/ccbp/localStorage.html
+++ b/ccbp/localStorage.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <textarea type="text" id="area" rows="10" cols="55"></textarea><br>
+    <textarea type="textarea" id="area" rows="10" cols="55"></textarea><br>
     <button id="button"  class="btn btn-primary">Save</button>
     <script>
 
@@ -18,7 +18,10 @@
 
           btn.onclick=function(){
          let userText=localArea.value;
-         localStorage.setItem("userText",userText)
+         localStorage.setItem("userText", userText)
+         console.log("userText", userText);
+         
+
 };
 
 // local storage getItem() method used
